--- a/02-asincronia-evenloop.html
+++ b/02-asincronia-evenloop.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Asincronia JS Evenloop</title>
   </head>
   <body>
     <script>
